examples/ill-formed/primitives/InvalidMethodParameterType.primitive
Primitive InvalidMethod(Set set1, Set set2, Set set3) {
    Set myset1 = set1;
    Set myset2 = set2;
    Set myset3 = set3;

    myset1 f(set2 x);

    myset3 g(set4 x);
}
